At media query max wdith of 1825px, add a botton padding to the domain section to avoid overlap of div-3 and the footer

--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,12 @@ footer {
     #main-learning article#learning-2, #main-learning article#learning-3 {
         left: 690px;
     }
+
+    /* mrpba domains */
+
+    #domains {
+        padding-bottom: 50px;
+    }
 }
 
 @media(max-width: 1625px) {
